# pre-commit-jira-ticket-gh-issue

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  conf.py  flake.nix  index.md  pyproject.toml  readme.md
.github/workflows/: black.yml  documentation.yml  metadata.yml
pre-commit-metadata/: pyproject.toml
pre-commit-metadata/pre_commit_metadata/: prepare_commit_msg.py
pre_commit_hooks/: prepare_commit_msg.py
