[project]
name = "pre-commit-jira-ticket-gh-issue"
version = "0.0.1"
description = "Automatically add commit messages"
authors = [
    {name = "Xander Harris",email = "xander@platonic.io"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pip (>=25.0,<26.0)",
    "pipenv (>=2024.4.1,<2025.0.0)",
    "poetry (>=2.0.1,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
myst-parser = {extras = ["linkify"], version = "^4.0.0"}
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
sphinx-git = "^11.0.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinxcontrib-autoyaml = "^1.1.3"
sphinxcontrib-programoutput = "^0.18"
version-query = "^1.5.5"
